After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 691429 - WnckWindow should include a getter and signal for WM_WINDOW_ROLE
WnckWindow should include a getter and signal for WM_WINDOW_ROLE
Status: RESOLVED FIXED
Product: libwnck
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: libwnck maintainers
libwnck maintainers
Depends on:
Blocks:
 
 
Reported: 2013-01-09 15:31 UTC by Marco Trevisan (Treviño)
Modified: 2013-02-05 21:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-WnckWindow-add-WM_WINDOW_ROLE-support (7.72 KB, patch)
2013-01-09 15:31 UTC, Marco Trevisan (Treviño)
accepted-commit_now Details | Review
0002-TestWnck-added-window-role-tests (2.70 KB, patch)
2013-01-09 15:32 UTC, Marco Trevisan (Treviño)
accepted-commit_now Details | Review

Description Marco Trevisan (Treviño) 2013-01-09 15:31:28 UTC
Created attachment 233083 [details] [review]
0001-WnckWindow-add-WM_WINDOW_ROLE-support

WM_WINDOW_ROLE [1] is used by some applications to uniquely identify a window (other than WM_CLASS). For example gnome-control-center uses it.

BAMF needs to be able to fetch it and being notified of its changes, added support to it in the attached patches.

[1] http://tronche.com/gui/x/icccm/sec-5.html
Comment 1 Marco Trevisan (Treviño) 2013-01-09 15:32:23 UTC
Created attachment 233084 [details] [review]
0002-TestWnck-added-window-role-tests
Comment 2 Marco Trevisan (Treviño) 2013-02-05 18:04:40 UTC
Review of attachment 233084 [details] [review]:

+1
Comment 3 Marco Trevisan (Treviño) 2013-02-05 18:04:54 UTC
Review of attachment 233083 [details] [review]:

+1
Comment 4 Marco Trevisan (Treviño) 2013-02-05 18:07:20 UTC
Review of attachment 233083 [details] [review]:

ok for commit