WnckWindow: add WM_WINDOW_ROLE support

Added both a getter and a signal to be notified of its changes

https://bugzilla.gnome.org/show_bug.cgi?id=691429